# WeatherAPI

./: .gitmodules  CMakeLists.txt
include/: weather.hpp
src/: fetchdata.py  main.cpp  weather.cpp
